src/objects/Shop__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporation__c</fullName>
        <label>Corporation</label>
        <referenceTo>Corporation__c</referenceTo>
        <relationshipLabel>Shops</relationshipLabel>
        <relationshipName>Shops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue__c</fullName>
        <label>Monthly Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Shops</relationshipLabel>
        <relationshipName>Shops</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Shop</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Shop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shops</pluralLabel>
    <recordTypes>
        <fullName>Supermarket</fullName>
        <active>true</active>
        <label>Supermarket</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web_shop</fullName>
        <active>true</active>
        <label>Web shop</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Monthly_Revenue_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Monthly_Revenue__c &lt; 0</errorConditionFormula>
        <errorMessage>Monthly Revenue must be greater than 0!</errorMessage>
    </validationRules>
</CustomObject>